--- a/content/themes/elements/sass/states/_domain.scss
+++ b/content/themes/elements/sass/states/_domain.scss
@@ -18,7 +18,7 @@
   }
 }
 
-body.no-background-blend-mode .section_domain{
+html.no-background-blend-mode .section_domain .inner{
   background-color: $blue-transparent;
 }
 
